--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,7 @@ body {
 }
 
 .page-container {
+  position: relative;
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
@@ -105,6 +106,7 @@ body {
 
 .page-header {
   display: flex;
+  position: relative;
 }
 
 .main-logo {
@@ -182,14 +184,95 @@ body {
   margin: auto;
 }
 
-.navigation-link-basket{
+.navigation-link-cart {
   content: "";
   position: absolute;
   top: 9px;
   left: 16px;
-
 }
 
+.modal {
+  position: absolute;
+  background-color: white;
+  border-radius: 4px;
+  z-index: 2;
+  filter: drop-shadow(0px 15px 40px rgba(45, 52, 64, 0.12));
+}
+
+.modal-search {
+  top: 76px;
+  right: 221px;
+  padding: 24px 16px;
+  display: none;
+}
+
+.modal-search .field {
+  width: 324px;
+  padding: 12px 14px;
+}
+
+.modal-basket-index {
+  top: 77px;
+  right: 0;
+  padding: 48px;
+  width: 192px;
+  display: none;
+}
+
+.modal .modal-basket-text {
+  display: block;
+  text-align: center;
+  margin: 0;
+}
+
+.modal-in-form {
+  padding: 48px;
+  top: 76px;
+  right: 113px;
+  display: none;
+}
+
+.modal-in-form .modal-in-text {
+  margin-bottom: 31px;
+  display: block;
+}
+
+.modal-in-form .field {
+  padding: 12px 16px;
+}
+
+.in-form-wrap {
+  position: relative;
+}
+
+.in-form-wrap .modal-in-mailing {
+  margin: 0 0 16px 0;
+  width: 324px;
+}
+
+.in-form-wrap .link-form-wrap {
+  margin-top: 12px;
+}
+
+.in-form-hints {
+  position: absolute;
+  bottom: 48px;
+  left: 184px;
+  display: flex;
+  flex-direction: column;
+}
+
+.hints {
+  color: #2D3440;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 4px;
+  text-decoration: none;
+}
+
+.hints-text {
+  border-bottom: 1px solid black;
+}
 
 /* ---MAIN-INDEX--- */
 
@@ -457,7 +540,7 @@ body {
 }
 
 .presents-item-wrap {
-  padding: 40px 0 40px 40px;
+  padding: 40px 0 35px 40px;
   max-width: 321px;
 }
 
@@ -474,11 +557,9 @@ body {
 .presents-item {
   background-color: #FF7799;
   color: #2D3440;
-  /* временный размер - убрать!!! */
-  height: 268px;
 }
 
-.presents-item-title {
+.presents-item-title, .modal-basket-title {
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
@@ -609,7 +690,6 @@ body {
 
 .description-wrap {
   background-color: #FCFCFC;
-
   padding: 57px 40px 56px 40px;
 }
 
@@ -653,7 +733,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 74px;
+  margin-bottom: 72px;
 }
 
 .news {
@@ -708,9 +788,8 @@ body {
 
 .mailing-email {
   margin: 0 24px 0 0;
+  width: 332px;
 }
-
-
 
 .delivery {
   background-color: rgb(207, 207, 207);
@@ -756,10 +835,12 @@ body {
   row-gap: 18px;
   column-gap: 16px;
 }
+
 .form-label-icon {
   position: relative;
   padding-right: 4px;
 }
+
 .info {
   position: absolute;
   width: 14px;
@@ -769,28 +850,29 @@ body {
   padding: 0;
   border: none;
   background-color: transparent;
-  background-image: url("../images/vector/Info.svg");
+  background-image: url("../images/vector/info.svg");
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
 }
+
 .field-group {
   margin: 0;
   display: flex;
   flex-direction: column;
 }
+
 .field {
   margin: 0;
-    padding: 14px 16px;
-    font-size: 16px;
-    font: inherit;
-    font-weight: 400;
-    color: #B9B9B9;
-    border: 1px solid gray;
-    border-radius: 4px;
-    opacity: 0.5;
-
-
+  padding: 14px 16px;
+  font: inherit;
+  font-weight: 400;
+  color: #B9B9B9;
+  border: 1px solid gray;
+  border-radius: 4px;
+  opacity: 0.5;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .form-delivery-date {
@@ -811,8 +893,6 @@ body {
   line-height: 20px;
   font-weight: 700;
 }
-
-
 
 .form-label {
   margin-bottom: 6px;
@@ -934,7 +1014,51 @@ body {
   padding: 4px;
   background-color: rgba(255, 47, 100, 0.3);
   border-radius: 26px;
-  margin-left: -4px;
+  margin-left: -3px;
+  margin-top: 2px;
+}
+
+.modal-feedback {
+  top: 2879px;
+  right: 300px;
+  padding: 65px 64px 65px 64px;
+  display: none;
+}
+
+.feedback-wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.feedback-text {
+  margin: 0;
+  margin-bottom: 31px;
+  display: block;
+}
+
+.modal-feedback .field {
+  width: 442px;
+}
+
+.modal-feedback .field {
+  padding: 12px 16px;
+}
+
+.feedback-mailing {
+  margin: 0;
+  margin-bottom: 16px;
+}
+
+.modal-feedback .button-pink-wrap {
+  margin: 20px -5px 2px auto;
+}
+
+.modal-feedback .feedback-close {
+  position: absolute;
+  top: -28px;
+  right: -30px;
+  cursor: pointer;
 }
 
 /* ---CATALOG--- */
@@ -988,47 +1112,39 @@ body {
   width: 807px;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .catalog-form-group {
+  position: relative;
   font-size: 14px;
   line-height: 20px;
   margin: 0;
-    margin-bottom: 16px;
-    border: none;
-    padding: 0;
+  margin-bottom: 16px;
+  border: none;
+  padding: 0;
 }
-.catalog-form-group:nth-child(2),
-.catalog-form-group:nth-child(3) {
-margin-left: 24px;
+
+.catalog-form-group:nth-child(2), .catalog-form-group:nth-child(3) {
+  margin-left: 24px;
 }
+
 .catalog-form-item-list-checkbox .catalog-form-item:nth-child(2) {
   margin-right: 10px;
 }
-
-
-
-
-
-
-
-
-
-
 
 .range {
   background-color: #FEC7D5;
   border-radius: 20px;
   padding: 17px 16px;
 }
+
 .range-scale {
   position: relative;
   height: 2px;
   background-color: #CCA8B5;
   width: 164px;
-
 }
+
 .range-bar {
   position: absolute;
   height: 2px;
@@ -1046,65 +1162,75 @@ margin-left: 24px;
   border: 6px solid #2D3440;
   border-radius: 50%;
 }
+
 .toggle-min {
   top: -7px;
   left: -8px;
 }
+
 .toggle-max {
   top: -7px;
   right: -6px;
 }
 
-.range-wrapper-inputs {
-display: flex;
-margin-bottom: 8px;
-margin-left: 16px;
+.wrapper-catalog-form-label {
+  position: absolute;
+  top: -28px;
+  left: 54px;
 }
+
 .catalog-form-group-title {
   border: none;
-  margin: 0;
+  margin: 0 0 8px 16px;
   padding: 0;
 }
+
 .catalog-form-wrapper-labels {
-background-color: #FEC7D5;
-border-radius: 20px;
-padding: 8px 16px;
+  background-color: #FEC7D5;
+  border-radius: 20px;
+  padding: 8px 16px;
 }
+
 .catalog-form-item-list {
   list-style: none;
   margin: 0;
   display: flex;
 }
+
 .control {
   padding-left: 24px;
-position: relative;
-cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
-.control:hover .control-input[type="radio"] + .control-mark {
+
+.control:hover .control-input[type="radio"]+.control-mark {
   border-color: white;
 }
-.control-input:disabled + .control-input[type="radio"] + .control-mark  {
+
+.control-input:disabled+.control-input[type="radio"]+.control-mark {
   border-color: #AA7E8F;
 }
 
-.catalog-form-item:not(:nth-last-child(1)) .control {margin-right: 16px;}
-
-.control-input[type="radio"]:checked + .control-mark::before {
-content: "";
-position: absolute;
-width: 6px;
-height: 6px;
-background-color: #2D3440;
-top: 3px;
-left: 3px;
-border-radius: 50%;
+.catalog-form-item:not(:nth-last-child(1)) .control {
+  margin-right: 16px;
 }
-.control:hover .control-input[type="radio"]:checked + .control-mark::before {
+
+.control-input[type="radio"]:checked+.control-mark::before {
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background-color: #2D3440;
+  top: 3px;
+  left: 3px;
+  border-radius: 50%;
+}
+
+.control:hover .control-input[type="radio"]:checked+.control-mark::before {
   background-color: white;
 }
 
-
-.control-input[type="radio"] + .control-mark {
+.control-input[type="radio"]+.control-mark {
   position: absolute;
   content: "";
   width: 12px;
@@ -1114,10 +1240,12 @@ border-radius: 50%;
   top: 1px;
   left: 1px;
 }
+
 .control-label {
   font-family: inherit;
 }
-.control-input[type="checkbox"]:not(:checked) + .control-mark {
+
+.control-input[type="checkbox"]:not(:checked)+.control-mark {
   content: "";
   position: absolute;
   width: 16px;
@@ -1128,7 +1256,7 @@ border-radius: 50%;
   left: 0px;
 }
 
-.control-input[type="checkbox"]:checked + .control-mark::before {
+.control-input[type="checkbox"]:checked+.control-mark::before {
   content: "";
   position: absolute;
   width: 16px;
@@ -1137,28 +1265,32 @@ border-radius: 50%;
   background-repeat: no-repeat;
   top: 0px;
   left: 0px;
-  }
-
+}
 
 .catalog-form-input {
   width: 25px;
-    padding: 0;
-    font-family: inherit;
-    text-align: center;
-    background: transparent;
-    border: none;
-margin-left: 4px;
+  padding: 0;
+  font-family: inherit;
+  text-align: center;
+  background: transparent;
+  border: none;
+  margin-left: 4px;
 }
-.catalog-form-input::-webkit-outer-spin-button,
-.catalog-form-input::-webkit-inner-spin-button {
+
+.catalog-form-input[name="max-price"] {
+  margin-left: 0;
+}
+
+.catalog-form-input::-webkit-outer-spin-button, .catalog-form-input::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
 }
+
 .catalog-form .button {
   font-weight: 700;
 }
-.catalog-form-select {
 
+.catalog-form-select {
   border: none;
   background-color: #FEC7D5;
   border-radius: 20px;
@@ -1168,21 +1300,23 @@ margin-left: 4px;
   appearance: none;
   cursor: pointer;
 }
+
 .catalog-form-label-wrap {
   position: relative;
   cursor: pointer;
 }
+
 .catalog-form-label-wrap::before {
   content: "";
   position: absolute;
-  background-image: url("../images/vector/Union-select.svg");
+  background-image: url("../images/vector/union-select.svg");
   background-repeat: no-repeat;
   top: 16px;
   right: 15px;
   width: 12px;
   height: 6px
-
 }
+
 .button-catalog-form {
   font-family: inherit;
   height: 40px;
@@ -1195,56 +1329,53 @@ margin-left: 4px;
   margin-left: 26px;
   margin-top: 26px;
 }
+
 .pagination-wrap-button {
   position: absolute;
-    left: 584px;
-    transform: translate(-50%);
-    border: 4px solid #F2C7D3;
-    padding: 12px 33px;
-    border-radius: 26px;
-    font-family: inherit;
-    font-size: 16px;
-    top: 13px;
-    cursor: pointer;
+  left: 584px;
+  transform: translate(-50%);
+  border: 4px solid #F2C7D3;
+  padding: 12px 33px;
+  border-radius: 26px;
+  font-family: inherit;
+  font-size: 16px;
+  top: 13px;
+  cursor: pointer;
 }
 
 .pagination-wrap {
   display: flex;
-  padding: 28px 0 26px 0;
-    position: relative;
+  padding: 26px 0;
+  position: relative;
 }
-
 
 .pagination {
   display: flex;
   margin-left: auto;
-  margin-right: 40px;
+  margin-right: 33px;
 }
 
-
-.pagination-item:not(:last-child) {
-  margin-right: 17px;
-}
-
-.pagination-link {
-  color: inherit;
-  text-decoration: none;
-  line-height: 20px;
-}
 .pagination-item {
   position: relative;
 }
-.pagination-current::before {
-  position: absolute;
-  content: "";
-  width: 24px;
-  height: 24px;
+
+.pagination-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: inherit;
+  width: 26px;
+  height: 26px;
+  background-color: transparent;
+  text-decoration: none;
+  color: #2D3440;
+}
+
+.pagination-item .pagination-current {
   background-color: white;
   border-radius: 50%;
-  left: -8px;
-  top: -1px;
-  z-index: -1;
 }
+
 .pagination-link-button {
   width: 16px;
   height: 16px;
@@ -1252,16 +1383,120 @@ margin-left: 4px;
   background-color: transparent;
   cursor: pointer;
 }
+
 .pagination-item-button-prev {
   position: absolute;
   top: 28px;
   right: 181px;
 }
+
 .pagination-item-button-next {
   position: absolute;
   top: 28px;
   right: 0px;
 }
+
 .pagination-disabled {
   opacity: 0.2;
+}
+
+.modal-basket {
+  position: absolute;
+  right: 0;
+  top: 76px;
+  width: 441px;
+  padding: 48px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: none;
+}
+
+.modal-products-list {
+  list-style: none;
+  margin: 17px 0 29px 0;
+  padding: 0;
+  border-bottom: 1px solid #E7E7E7;
+}
+
+.modal-products-item {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.modal-products-item:last-child {
+  margin-bottom: 26px;
+}
+
+.modal-assortment-title {
+  width: 150px;
+  margin: 0;
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.modal0text-wrap {
+  margin-left: 12px;
+}
+
+.modal-text {
+  margin-left: 14px;
+  margin-right: auto;
+  align-self: center;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  font-family: inter;
+  padding: 0;
+  margin-bottom: 5px;
+}
+
+.modal-product-desc {
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 20px;
+  color: #B9B9B9;
+}
+
+.modal-assortment-button {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  align-self: center;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.modal-assortment-button::before, .modal-assortment-button::after {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 2px;
+  border-radius: 20px;
+  background-color: black;
+  top: 4px;
+  left: 1px;
+}
+
+.modal-assortment-button::before {
+  transform: rotate(45deg);
+}
+
+.modal-assortment-button::after {
+  transform: rotate(-45deg);
+}
+
+.modal-zakaz-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-zakaz-text {
+  margin: 0;
 }
